Fix link to Rutberg chapter in Smithsonian book modified:   home.html

--- a/home.html
+++ b/home.html
@@ -231,8 +231,7 @@ the statement
       </blockquote>
       
 <p>Dr. Rutberg contributed a chapter to the same Smithsonian Institution book cited above.
-  <%= link_to 'His contribution may be found here', 
-    asset_path('/downloads/Rutberg_chapter_final.pdf'), target: "_blank"%>.
+<a href="pdfs/Rutberg_chapter_final.pdf">His contribution may be found here</a>
     </p>
     An important quote from this chapter:
     <p>
