modified:   home.html

--- a/home.html
+++ b/home.html
@@ -231,7 +231,7 @@ the statement
       </blockquote>
       
 <p>Dr. Rutberg contributed a chapter to the same Smithsonian Institution book cited above.
-<a href="pdfs/Rutberg_chapter_final.pdf">His contribution may be found here</a>
+<a href="pdfs/Rutberg_chapter_final.pdf">His contribution may be found here.</a>
     </p>
     An important quote from this chapter:
     <p>
@@ -269,8 +269,7 @@ the statement
     </p><p>
     Within the limits of practicality, I will accompany the results I obtain
     with a footnote link (an integer in square brackets, e.g. [3]) specifying the HP12c setup required to obtain the result I am discussing. This will allow you to replicate my results if you have a 12c or a phone-based 12c emulator. I do assume
-    that you are familiar with the HP12c and understand how to solve cash-flow problems with this superb tool. If you need a refresher and don't have your printed manuals, you will find <%= link_to 'the HP12c User Guide in .pdf format here', 
-    asset_path('/downloads/HP12c_User_Guide.pdf'), target: "_blank"%>.
+    that you are familiar with the HP12c and understand how to solve cash-flow problems with this superb tool. If you need a refresher and don't have your printed manuals, you will find <a href="pdfs/HP12c_User_Guide.pdf">the HP12c User Guide in .pdf format here,</a> 
     </p><p>
     The problem we wish to solve is this: given an initial herd size and the herd's growth rate,
     we would like to calculate many deer must be killed in town land bow hunts annually (in addition to the other ways deer are killed in Carlisle -- private land and Great Meadows hunting and automobile collisions)
