All Rails-style references to pdfs changed to simple html references. modified:   home.html

--- a/home.html
+++ b/home.html
@@ -426,8 +426,7 @@ The most common management actions required to get at the root cause are to fost
   
   <h3 id="HumaneSociety">Humane Society of the United States pamphlet</h3>
   <p>The Humane Society of the United States has developed 
-  <%= link_to 'a pamphlet', asset_path('/downloads/HSUS_Deer_Conflict_Mgt_Plan_FINAL.pdf'),
-  target: "_blank"%>
+  <a href="HSUS_Deer_Conflict_Mgt_Plan_FINAL.pdf">a pamphlet</a>
    containing very
   good, sensible information about how to deal with deer conflicts and issues.
   
@@ -478,7 +477,7 @@ The most common management actions required to get at the root cause are to fost
   the auspices of the Carlisle Land Stewards sub-committee, Kay has undertaken a study of selected forest tracts in Carlisle, beginning with the Towle Land and the Davis Corridor.
 
   <%= link_to 'She has written an initial report on her Towle findings', 
-    asset_path('/downloads/Towle Observations-for-LSC.pdf'), target: "_blank"%>.  It is very worthwhile reading.
+<a href="pdfs/Towle Observations-for-LSC.pdf">She has written an initial report on her Towle findings</a>.  It is very worthwhile reading.
   </p>
 
   <h3 id="LymeDisease">Lyme Disease</h3>
