modified:   home.html

--- a/home.html
+++ b/home.html
@@ -53,14 +53,16 @@ td {
   <p>In 2019, another hunt occurred, resulting in the killing of 6 deer (3 females).
   
   </p><p>In 2020, due to significant public opposition, the Select Board canceled the  2020 hunt and decided to place the 
-  public land deer-hunting question before the 2021 Town Meeting.
+  public land deer-hunting question before the 2021 Town Meeting. In the spring of 2021, the Select Board chose to join a Boston University
+  research program that is studying how communities deal with deer issues. The question of whether to continue the town land hunts did not
+  appear on the warrant for the 2021 Town Meeting.
   
   </p><p>The Select Board's concern for our forest under-story is attributable to an aggressive campaign by the Massachusetts Division of Fisheries and Wildlife (DFW) 
   to encourage towns to adopt deer-hunting programs. DFW is a state organization supported by revenues from hunting, trapping and fishing licenses. 
-  </p><p>
   This campaign was intended to alarm the targeted towns of the consequences of deer overabundance.
 
-  In Carlisle, the Select Board acted despite the absence of a rigorous and unbiased study demonstrating forest damage that could be attributed to deer overabundance.
+  </p><p>
+ The Carlisle Select Board acted despite the absence of a rigorous and unbiased study demonstrating forest damage that could be attributed to deer overabundance.
  There was also much data and expert opinion that public-land archery hunts could not and would not address deer issues.
   </p>
   <h2>
