modified:   home.html

--- a/home.html
+++ b/home.html
@@ -478,8 +478,7 @@ The most common management actions required to get at the root cause are to fost
   Under
   the auspices of the Carlisle Land Stewards sub-committee, Kay has undertaken a study of selected forest tracts in Carlisle, beginning with the Towle Land and the Davis Corridor.
 
-  <%= link_to 'She has written an initial report on her Towle findings', 
-<a href="pdfs/Towle Observations-for-LSC.pdf">She has written an initial report on her Towle findings</a>.  It is very worthwhile reading.
+She has written <a href="pdfs/Towle Observations-for-LSC.pdf">an initial report</a>  on her Towle findings.  It is very worthwhile reading.
   </p>
 
   <h3 id="LymeDisease">Lyme Disease</h3>
