modified:   home.html

--- a/home.html
+++ b/home.html
@@ -493,8 +493,8 @@ She has written <a href="pdfs/Towle Observations-for-LSC.pdf">an initial report<
     Trying to fight Lyme is like “trying to solve a multivariate equation with 18 variables and only knowing two of them.” -- Henry Lind, the co-chair of the Barnstable County Lyme/Tick-Borne Diseases Task Force.
   </blockquote>
   There is a view held by some that a reduction in deer density by a certain percentage will always result in the same percentage reduction in Lyme Disease risk. This is assuming a causal linear relationship between deer density and Lyme Disease risk, which is false.
-  Furthermore, much of the scientific community does not view deer density as a causal factor in Lyme Disease risk. Even a scientist in the minority, Dr. Samuel Telford of Tufts University, who
-  believes there is a causal link, concedes that until deer densities are brought to very low levels, reduction of deer density has no effect on Lyme Disease risk. This is discussed further <a href="#Telford">below</a>.
+  Furthermore, much of the scientific community does not consider deer density a causal factor in Lyme Disease risk at all. Even a scientist in the minority, Dr. Samuel Telford of Tufts University, 
+  concedes that until deer densities are brought to very low levels, reduction of deer density has no effect on Lyme Disease risk. This is discussed further <a href="#Telford">below</a>.
 
   Quotes from the work of scientists who have studied the problem:
 
