Delete unnecessary comma. modified:   home.html

--- a/home.html
+++ b/home.html
@@ -169,7 +169,7 @@ These growth rates are typical of what we find in the deer literature. The concl
 To get a sense of the magnitude of the growth rates cited above, it is helpful to note that deer population growth and the growth of bank accounts paying compound interest are identical (exponential) processes mathematically. For a bank account to grow as
 deer herds can – double in two years (using the estimate from Connecticut DEEP above) in the absence of significant withdrawals – would require an annual interest rate of 41.4%. 
  I doubt that there is anyone reading this (or any investment manager) who wouldn't be
-thrilled with a long-term annual 41.4% return from their bank account, or investment portfolio.
+thrilled with a long-term annual 41.4% return from their bank account or investment portfolio.
 </p><p>
 The greatest investors, whether Warren Buffett, Peter Lynch, or the late David Swensen (of the Yale Endowment Fund), have not come close to returning 41.4% annually over the long term. For example, in one of the most remarkable investing performances in history,  Peter Lynch managed the Fidelity Magellan fund from 1977 until 1990, achieving a 29% annual return (Mr. Lynch did best the growth rate cited in the Hale/McCarthy paper by a few percentage points).
 
@@ -494,8 +494,9 @@ She has written <a href="pdfs/Towle Observations-for-LSC.pdf">an initial report<
   </blockquote>
   There is a view held by some that a reduction in deer density by a certain percentage will always result in the same percentage reduction in Lyme Disease risk. This is assuming a causal linear relationship between deer density and Lyme Disease risk, which is false.
   Furthermore, much of the scientific community does not consider deer density a causal factor in Lyme Disease risk at all. Even a scientist in the minority, Dr. Samuel Telford of Tufts University, 
-  believes there is a causal link, writes that the causal relationship exists only when deer densities are brought to very low levels; otherwise, reduction of deer density has no effect on Lyme Disease risk. This is discussed further <a href="#Telford">below</a>.
+  who believes there is a causal link, writes that the causal relationship exists only when deer densities are brought to very low levels; otherwise, reduction of deer density has no effect on Lyme Disease risk. This is discussed further <a href="#Telford">below</a>.
 
+  </p><p>
   Quotes from the work of scientists who have studied the problem:
 
   <blockquote>
@@ -584,7 +585,7 @@ if there is no benefit, or if there is a benefit, the added costs of "doing some
   growth rate for well-fed deer herds and calculate herd sizes that are the average of first assuming all deer are killed before reproduction and then assuming the opposite. We also assume an initial herd size that is the average, 513,  of DFW's minimum and maximum estimates of 342 and 684.
   </p><p>
   The chart shows the growth of the deer herd both with and without the expanded town land hunts until it reaches its maximum size, imposed by the biological carrying capacity. As you can see from the blue curve, no deer problems are solved with the hunts, because despite the hunting, the herd
-  continues to grow until the assumed biological carrying capacity is reached. Solving problems requires a <i>reduction</i> in the herd size. All the hunts accomplish is to slightly slow the rate at which any deer-related problems we might have get worse. In year 3, the herd size reaches 1000 without the hunts, 976 with the hunts. The next year, the herd size is 1000 with or without the hunts. 
+  continues to grow until the assumed biological carrying capacity is reached. Solving problems caused by too many deer requires a <i>reduction</i> in the herd size. All the hunts accomplish is to slightly slow the rate at which any deer-related problems we might have get worse. In year 3, the herd size reaches 1000 without the hunts, 976 with the hunts. The next year, the herd size is 1000 with or without the hunts. 
   </p><p>
   What has been "accomplished" with the hunts is hardly worth the loss of public access (<a href="#safety">due to legitimate safety concerns</a>) to an expanded set of town lands for an increased period of time -- three months extending from the end of the summer to early winter. It is also
   not worth the added monetary costs to the town to administer the hunts. And lastly, we must confront the moral cost of killing living creatures <a href="#inhumane">in brutal, inhumane fashion</a> without justification, given that their deaths do not solve deer problems. And a better approach exists, one that attacks the root cause of deer overpopulation -- correcting our use of deer-friendly plants in our residential landscapes and the unwise feeding of deer, <a href="#texas_recommendation">per the recommendation of the Texas A&M paper previously cited</a>.
