--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ td {
    </p><p>And so it is with deer. A great deal of scientific knowledge has been accumulated concerning both deer-related problems and their management. Consistent with our history, the intuitions of lay people are frequently contradicted by that science.
    It is therefore essential that we call upon actual scientific knowledge, rather than untested conjecture, both when establishing whether deer-related problems exist and if they do, what to do about them. It is the purpose of this website to assist with this goal.
 
-   </p><p>A summary of this work appears below, without supporting detail. If you are prepared to accept what is said, you needn't read further.
+   </p><p>A summary of this work appears below, without supporting detail. If you are prepared to accept what is said, you needn't read further than the summary.
    But for those who wish a more detailed understanding of how and why we reach the conclusions we do, further reading will be necessary. The summary  contains many links to the explanatory material. <a href="#impossible">That material</a> may also be read from beginning to end, if you prefer.
  </p><p>
   <ul>
