Clarify summary. modified:   index.html

--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@ td {
   <ul>
     <li>
    Whatever deer problems we may have in Carlisle (or think we have), it is <a href="#impossible">impossible to solve them with bow hunting on town land.</a>
-   For the hunts to address those problems, they must reduce the size of the deer herd. To accomplish this, the town-land hunts would need to cause the total number of deer killed annually in Carlisle by humans to exceed the number of deer the herd
-   would add annually by reproduction. We demonstrate by evidence and calculation that this is impossible, even for fully expanded hunts, because of the powerful ability of well-fed deer herds to reproduce.
+   For the hunts to address those problems, they must reduce the size of the deer herd. To accomplish this, the town-land hunts would need to cause the total number of deer killed annually in Carlisle by humans (town land hunting, private land hunting, automobile collisions) to exceed the number of deer the herd
+   would add annually by reproduction. We demonstrate by evidence and calculation that this is impossible, even if we expand the hunts as proposed by the Carlisle Deer Control Committee (DCC), because of the powerful ability of well-fed deer herds to reproduce.
     </li> <li>
   <p>
   Data provided by the Massachusetts Division of Fish and Wildlife (DFW), tells us that <a href="#HuntingFailure">all forms of hunting in Massachusetts</a> over almost six decades resulted
