--- a/index.html
+++ b/index.html
@@ -82,14 +82,15 @@ td {
     <li>
    Whatever deer problems we may have in Carlisle (or think we have), it is <a href="#impossible">impossible to solve them with bow hunting on town land.</a>
    For the hunts to address those problems, they must reduce the size of the deer herd. To accomplish this, the town-land hunts would need to cause the total number of deer killed annually in Carlisle by humans (town land hunting, private land hunting, automobile collisions) to exceed the number of deer the herd
-   would add annually by reproduction. We demonstrate by evidence and calculation that this is impossible, even if we expand the hunts as proposed by the Carlisle Deer Control Committee (DCC), because of the powerful ability of well-fed deer herds to reproduce.
+   would add annually by reproduction. We demonstrate by evidence and calculation that this is impossible, even if we were to expand the town-land hunts as proposed by the Carlisle Deer Control Committee (DCC), because of the powerful ability of well-fed deer herds to reproduce.
     </li> <li>
   <p>
   Data provided by the Massachusetts Division of Fish and Wildlife (DFW), tells us that <a href="#HuntingFailure">all forms of hunting in Massachusetts</a> over almost six decades resulted
   in a 300% increase in the number of deer killed annually during that time period. Nonetheless, the Massachusetts deer herd continued to grow during that time.
  </p><p>
        Of great importance, most of the herd growth in those nearly six decades occurred in the eastern suburbs, <a href="#RapidGrowth"> at least in part because well-fed deer reproduce rapidly</a>,
-       and in suburban eastern Massachusetts <a href="#feast">we have created an unnaturally hospitable environment for deer</a>. This pits the rate at which hunters can kill deer against the powerful ability of well-fed deer herds to grow. Six decades of data demonstrate that the hunters have failed.
+       and in suburban eastern Massachusetts <a href="#feast">we have created an unnaturally hospitable environment for deer</a>. This pits the rate at which hunters can kill deer against the powerful ability of well-fed deer herds to grow.
+       Six decades of Massachusetts DFW data demonstrate the inability of hunting to overcome deer reproduction rates.
  </p><p>
        It should also be noted that the hospitable suburban environment makes greater herd sizes possible than would be the case in a natural setting, and it is more difficult to reduce a larger deer herd to a desired size in a given time period than a smaller one.
  </p><p>
@@ -136,15 +137,14 @@ td {
        the first chapter in the book <i>The Science of Overabundance, Deer Ecology and Population Management</i>, a collection of writings on deer overabundance published by The Smithsonian Institute.
       </blockquote>
  </p><p> While the scolding the McCabes direct at all of us may be unpleasant, it is important to understand the distinction they make between the environmental and societal limits on deer numbers; they are different, with the former
- almost always greater than the latter.  It is more likely that people <i>think</i> there are too many deer, because of eaten hostas or concerns about Lyme Disease, than it is that the herd size is actually large enough to cause serious environmental damage.
+ almost always greater than the latter.  It is more likely that people <i>think</i> there are too many deer, because of eaten hostas or <a href="#LymeDisease">fallacious beliefs regarding deer populations and Lyme Disease</a>, than it is that the herd size is actually large enough to cause serious environmental damage.
 </p><p id="RapidGrowth">
 People who believe there are too many deer in Carlisle tend to favor the deer hunts in the hope that the hunts will reduce the size of the deer herd and therefore solve the problems that concern them.
 That this is a false hope begins with a simple and indisputable fact: deer herds with sufficient food grow rapidly.
 </p><p>
 How rapidly?
 <blockquote>
-  "Two strong and well-nourished deer can produce as many as 30 offspring in a seven-year period." -- http://bioweb.uwlax.edu. This is equivalent to a maximum growth rate of 48.6%<a href="#F1">[1]</a> (the number enclosed in square
-  brackets is a clickable link to a footnote, which you find throughout this site).
+  "Two strong and well-nourished deer can produce as many as 30 offspring in a seven-year period." -- http://bioweb.uwlax.edu. This is equivalent to a maximum growth rate of 48.6%<a href="#F1">[1]</a>.
 </blockquote>
 <blockquote>
 "Because deer have a high reproductive potential and few natural predators,
@@ -153,7 +153,7 @@ two years is equivalent to an annual growth rate of 41.4%.
       </blockquote>
       <blockquote>
       "Deer populations in general have a remarkable ability to grow due to their high reproductive potential.
-         In the fenced George Reserve in Michigan, a population of six deer grew to 222 deer in seven years (McCullough 1979, McCullough 1984)." -- Indiana Division of Fish and Wildlife. This represents a remarkable 67.5% annual growth rate, but in a fenced area. So while such a growth rate is likely not applicable to deer running free in a town like Carlisle, it is an instructive data point regarding the ability of deer herds to grow.
+         In the fenced George Reserve in Michigan, a population of six deer grew to 222 deer in seven years (McCullough 1979, McCullough 1984)." -- Indiana Division of Fish and Wildlife. This represents a remarkable 67.5% annual growth rate, but in a fenced area. So while such a growth rate is likely not applicable to deer in the forests of a town like Carlisle, it is an instructive data point regarding the ability of deer herds to grow.
          </blockquote>
       <blockquote>
        A paper from the Texas A&M Agrilife Extension -- <i>Managing Overabundant White-tailed Deer</i>
