More clarifying revisions. modified:   index.html

--- a/index.html
+++ b/index.html
@@ -167,14 +167,14 @@ These growth rates are typical of what we find in the deer literature. The concl
 </p><p>
 
 To get a sense of the magnitude of the growth rates cited above, it is helpful to note that deer population growth and the growth of bank accounts paying compound interest are identical (exponential) processes mathematically. For a bank account to grow as
-deer herds can – double in two years (using the estimate from Connecticut DEEP above) in the absence of significant withdrawals – would require an annual interest rate of 41.4%. 
+deer herds can - double in two years (using the estimate from Connecticut DEEP above) in the absence of significant withdrawals - would require an annual interest rate of 41.4%. 
  I doubt that there is anyone reading this (or any investment manager) who wouldn't be
 thrilled with a long-term annual 41.4% return from their bank account or investment portfolio.
 </p><p>
-The greatest investors, whether Warren Buffett, Peter Lynch, or the late David Swensen (of the Yale Endowment Fund), have not come close to returning 41.4% annually over the long term. For example, in one of the most remarkable investing performances in history,  Peter Lynch managed the Fidelity Magellan fund from 1977 until 1990, achieving a 29% annual return (Mr. Lynch did best the growth rate cited in the Hale/McCarthy paper by a few percentage points).
+The greatest investors, whether Warren Buffett, Peter Lynch, or the late David Swensen (of the Yale Endowment Fund), have not come close to returning 41.4% annually over the long term. In one of the most remarkable investing performances in history,  Peter Lynch achieved a 29% annual return when he managed the Fidelity Magellan fund from 1977 until 1990. (Mr. Lynch did best the 26% growth rate cited in the Hale/McCarthy paper by a few percentage points.)
 
 </p><p id="HuntingFailure">
-In order to reduce the size of the deer herd by hunting, we need to kill deer at a rate greater than the herd's natural growth rate.
+As mentioned earlier, in order to reduce the size of the deer herd by hunting, we need to kill deer at a rate greater than the herd's natural growth rate.
 That this is extremely difficult can first be seen from data provided by the Massachusetts Division of Fisheries and Wildlife (DFW).
 The number of deer killed annually by hunters from 1961
 through 2018 increased by a factor of 4, or 300% (see the chart below).
