Fix problem with image references. modified:   index.html

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ td {
   <h1>The Public Land Deer Hunts in Carlisle:<br>A Science-based Viewpoint</h1>
   </head>
   
-   <img src="/images/carlisle_library.jpg"}> 
+   <img src="images/carlisle_library.jpg"}> 
   <h2>
   A Brief History of the Carlisle Public Land Deer Hunts
   </h2>
@@ -179,7 +179,7 @@ That this is extremely difficult can first be seen from data provided by the Mas
 The number of deer killed annually by hunters from 1961
 through 2018 increased by a factor of 4, or 300% (see the chart below).
 </p><p>
-   <img src="/images/dfw_hunting_data.png"}> 
+   <img src="images/dfw_hunting_data.png"}> 
 </p><p>
 But since 1965, the number of hunters in Massachusetts has decreased by 50%.
 
@@ -304,7 +304,7 @@ the statement
 
       Our results are summarized in the following bar chart. The chart provides the results of our calculations of the number of deer that would need to be killed in the town land hunts to reach DFW's target population of 200 in  2, 5, 10, and 30 years, starting with a herd size of 513 and using the 26% and 41.4% annual growth rates previously discussed. The estimated (by the Carlisle Deer Control Committee (DCC) former chairman, Johnathan DeKock) kill (24) for expanded town land hunts and the average (8) of the actual results of the pilot hunts are included for reference.
       </p><p>
-      <img src="/images/Required_kill_bar_chart.png"}>
+      <img src="images/Required_kill_bar_chart.png"}>
       </p><p id="BarChartResults">
       Focusing on the group of bars for the 5 year time frame, we see that the calculation indicates that if the growth rate is 41.4%, 150<a href="#F3">[3]</a> deer would have to be killed annually in the town land hunts to reach the 200-deer target in 5 years. A growth
       rate of 26% would require that 98 deer be killed annually in the town land hunts to reach the 200-deer target in that 5-year time frame. These are factors of 6.25 (525%) and 4.08 (308%) greater than 24-deer/year best-case estimate by the Carlisle DCC for the expanded town land hunts. Giving ourselves 10 years to accomplish the task, 129  and 72 deer/year are factors of 5.37 (437%) and 3 (200%) larger than the expanded-hunt estimate. Taking 30 years to accomplish the task would still require factors of 5.25 (425%) and 2.67 (167%) more deer killed in the town land hunts than the estimates the DCC estimates expanded hunts could yield.
@@ -349,7 +349,7 @@ the statement
     <li>
    As the density of all deer is reduced, hunting them becomes exponentially more difficult, as can be seen in this chart:
      </p><p>
-   <img src="/images/hunting_efficiency.png"}> 
+   <img src="images/hunting_efficiency.png"}> 
      </p><p>
    </li>
     <li>
@@ -533,7 +533,7 @@ To convert Telford's threshold density to an actual target deer population for C
     We <a href="#calculation">earlier demonstrated</a> that it is impossible to reach a deer herd size of 200 from DFW's average estimate of 513 deer currently in Carlisle by allowing bow-hunting for deer on town land. 
     Obviously, lowering the target herd size does not improve the situation:
       </p><p>
-      <img src="/images/Required_kill_Telford_bar_chart.png"}>
+      <img src="images/Required_kill_Telford_bar_chart.png"}>
     Dr. Telford has provided information that allows us to calculate that the town land bow hunts will have no effect on Lyme Disease risk in Carlisle. 
   
     </p><p>
@@ -577,7 +577,7 @@ if there is no benefit, or there is a benefit, it does not justify its added cos
  Please consider this chart:
 
   </p><p>
-   <img src="/images/with_without.png"}> 
+   <img src="images/with_without.png"}> 
 
   </p><p>
   Here it is assumed that the town land hunts are expanded per the Deer Control Committee proposal (double the hunters, increased area of town land hunted, the season extended from two to three months). The Deer Control Committee has estimated this would result in a factor of 2 or 3 more deer killed per year than occurred in the pilot hunts. We assume a factor of 3, 24 deer killed/year. We
@@ -601,7 +601,7 @@ in the creation of bow-hunting programs in the eastern Massachusetts suburbs.
   </p><p>
     In 2019, Mr. Stainbrook gave a presentation on his view of the Massachusetts deer situation and how to deal with it. In this presentation, he offered the following chart:
   </p><p>
-      <img src="/images/stainbrook_growth.png"}>
+      <img src="images/stainbrook_growth.png"}>
   </p><p>
 
   </p><p>
@@ -639,7 +639,7 @@ when we can intervene in ways that satisfy good scientific and engineering crite
   analysis right before resorting to lethal means.
   </p>
   
-   <img src="/images/fawn.png"}> 
+   <img src="images/fawn.png"}> 
 
   <h2 id="Footnotes">Footnotes</h2>
   </p><p id="F1">
