Minor edit modified:   index.html

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ td {
  </p><p>
        Of great importance, most of the herd growth in those nearly six decades occurred in the eastern suburbs, <a href="#RapidGrowth"> at least in part because well-fed deer reproduce rapidly</a>,
        and in suburban eastern Massachusetts <a href="#feast">we have created an unnaturally hospitable environment for deer</a>. This pits the rate at which hunters can kill deer against the powerful ability of well-fed deer herds to grow.
-       Six decades of Massachusetts DFW data demonstrate the inability of hunting to overcome deer reproduction rates.
+       Six decades of Massachusetts DFW data demonstrate the inability of hunting to overcome well-fed deer herd growth rates.
  </p><p>
        It should also be noted that the hospitable suburban environment makes greater herd sizes possible than would be the case in a natural setting, and it is more difficult to reduce a larger deer herd to a desired size in a given time period than a smaller one.
  </p><p>
