Improve previous edit. modified:   index.html

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ td {
     <li>
    Whatever deer problems we may have in Carlisle (or think we have), it is <a href="#impossible">impossible to solve them with bow hunting on town land.</a>
    For the hunts to address those problems, they must reduce the size of the deer herd. To accomplish this, the town-land hunts would need to cause the total number of deer killed annually in Carlisle by humans (town land hunting, private land hunting, automobile collisions) to exceed the number of deer the herd
-   would add annually by reproduction. We demonstrate by evidence and calculation that this is impossible, even if we were to expand the town-land hunts as proposed by the Carlisle Deer Control Committee (DCC), because of the powerful ability of well-fed deer herds to reproduce.
+   would add annually by reproduction. We demonstrate by evidence and calculation that this is impossible, even if we were to expand the town-land hunts as proposed by the Carlisle Deer Control Committee (DCC), because of the powerful ability of well-fed deer herds to grow.
     </li> <li>
   <p>
   Data provided by the Massachusetts Division of Fish and Wildlife (DFW), tells us that <a href="#HuntingFailure">all forms of hunting in Massachusetts</a> over almost six decades resulted
@@ -90,7 +90,7 @@ td {
  </p><p>
        Of great importance, most of the herd growth in those nearly six decades occurred in the eastern suburbs, <a href="#RapidGrowth"> at least in part because well-fed deer reproduce rapidly</a>,
        and in suburban eastern Massachusetts <a href="#feast">we have created an unnaturally hospitable environment for deer</a>. This pits the rate at which hunters can kill deer against the powerful ability of well-fed deer herds to grow.
-       Six decades of Massachusetts DFW data demonstrate the inability of hunting to overcome well-fed deer herd growth rates.
+       Six decades of Massachusetts DFW data demonstrate the inability of hunting to overcome the large growth rate of well-fed deer herds.
  </p><p>
        It should also be noted that the hospitable suburban environment makes greater herd sizes possible than would be the case in a natural setting, and it is more difficult to reduce a larger deer herd to a desired size in a given time period than a smaller one.
  </p><p>
