modified:   index.html

--- a/index.html
+++ b/index.html
@@ -47,8 +47,20 @@ td {
   <h2>
   A Brief History of the Carlisle Public Land Deer Hunts
   </h2>
-  In 2018, the Carlisle Select Board initiated a pilot bow-hunt for deer on public lands. Their stated objective
-  was protection of our forest under-story from damage due to an overabundance of deer. 10 deer (5 females)  were killed in this initial hunt.
+	In 2015, the Carlisle Select Board began consideration of bow-hunting deer on town land. 
+  The Board members were concerned about deer forest under-story damage due to deer over-population.  This was attributable to an aggressive campaign by the Massachusetts Division of Fisheries and Wildlife (DFW) 
+  to encourage towns to adopt deer-hunting programs. DFW is a state organization supported by revenues from hunting, trapping and fishing licenses. Despite DFW's
+  stated concern for forest under-story damage due to deer over-population, they encourage the hunting of coyotes, a deer predator.
+
+<p>
+As a result, the following (non-binding) question appeared on the ballot of the  May 5, 2015 town election:
+      <blockquote>
+  “Shall the Town of Carlisle request the Selectmen 
+to place an article on the next Town Meeting warrant to regulate bow hunting on Town-owned lands as an approach to deer management?”
+	</blockquote>
+The question passed by a significant margin, 350-90, with 9 blank ballots.
+
+Despite the town's clear message, the article did not appear on any subsequent Town Meeting warrants and in 2018, the Carlisle Select Board initiated a pilot bow-hunt for deer on public lands without a Town Meeting vote. 10 deer were killed, 5 female.
 
   <p>In 2019, another hunt occurred, resulting in the killing of 6 deer (3 females).
   
@@ -57,9 +69,6 @@ td {
   research program that is studying how communities deal with deer issues. The question of whether to continue the town land hunts did not
   appear on the warrant for the 2021 Town Meeting.
   
-  </p><p>The Select Board's concern for our forest under-story is attributable to an aggressive campaign by the Massachusetts Division of Fisheries and Wildlife (DFW) 
-  to encourage towns to adopt deer-hunting programs. DFW is a state organization supported by revenues from hunting, trapping and fishing licenses. 
-  This campaign was intended to alarm the targeted towns of the consequences of deer overabundance.
 
   </p><p>
  The Carlisle Select Board acted despite the absence of a rigorous and unbiased study demonstrating forest damage that could be attributed to deer overabundance.
@@ -81,18 +90,15 @@ td {
   <ul>
     <li>
    Whatever deer problems we may have in Carlisle (or think we have), it is <a href="#impossible">impossible to solve them with bow hunting on town land.</a>
-   For the hunts to address those problems, they must reduce the size of the deer herd. To accomplish this, the town-land hunts would need to cause the total number of deer killed annually in Carlisle by humans (town land hunting, private land hunting, automobile collisions) to exceed the number of deer the herd
-   would add annually by reproduction. We demonstrate by evidence and calculation that this is impossible, even if we were to expand the town-land hunts as proposed by the Carlisle Deer Control Committee (DCC), because of the powerful ability of well-fed deer herds to grow.
+   For the hunts to correct those problems, they must reduce the size of the deer herd. To do so, the town-land hunts would need to kill the animals at a greater rate than the herd can replace them. We demonstrate by evidence and calculation that this is impossible, even if we were to expand the town-land hunts as proposed by the Carlisle Deer Control Committee (DCC), because of the extraordinary ability of well-fed deer herds to grow.
     </li> <li>
   <p>
-  Data provided by the Massachusetts Division of Fish and Wildlife (DFW), tells us that <a href="#HuntingFailure">all forms of hunting in Massachusetts</a> over almost six decades resulted
-  in a 300% increase in the number of deer killed annually during that time period. Nonetheless, the Massachusetts deer herd continued to grow during that time.
+  Data provided by the Massachusetts Division of Fish and Wildlife (DFW) tells us that <a href="#HuntingFailure">all forms of hunting in Massachusetts</a> over almost six decades failed to stop the growth of the State's deer herd, despite
+  a 300% increase in the number of deer killed annually during that time period. 
  </p><p>
-       Of great importance, most of the herd growth in those nearly six decades occurred in the eastern suburbs, <a href="#RapidGrowth"> at least in part because well-fed deer reproduce rapidly</a>,
-       and in suburban eastern Massachusetts <a href="#feast">we have created an unnaturally hospitable environment for deer</a>. This pits the rate at which hunters can kill deer against the powerful ability of well-fed deer herds to grow.
-       Six decades of Massachusetts DFW data demonstrate the inability of hunting to overcome the large growth rate of well-fed deer herds.
- </p><p>
-       It should also be noted that the hospitable suburban environment makes greater herd sizes possible than would be the case in a natural setting, and it is more difficult to reduce a larger deer herd to a desired size in a given time period than a smaller one.
+       Of great importance, most of the herd growth in those nearly six decades occurred in the eastern suburbs. <a href="#RapidGrowth"> Well-fed deer herds grow rapidly</a>,
+       and in suburban eastern Massachusetts <a href="#feast">we have created an unnaturally hospitable environment for deer</a>. If the deer herd is too large, it is our own doing. 
+       Six decades of Massachusetts DFW data demonstrate the inability of hunting to overcome the extraordinary ability of well-fed deer herds to grow.
  </p><p>
  Also contributing to the difficulty of controlling deer herds in the eastern suburbs is the necessity of laws that restrict hunting in densely populated areas.
 </p>
@@ -117,7 +123,7 @@ td {
         <a href="#inhumane">Bow-hunting is inhumane.</a>
       </li>
       </ul>
-      The hunts  <a href="#costs_without_benefits">impose costs without providing benefits</a>, except recreational benefits to a small number of hunters, most of whom are not residents of Carlisle.
+      The hunts  <a href="#costs_without_benefits">impose costs without providing benefits</a>, except to a small number of people who like to hunt, most of whom are not residents of Carlisle.
       </li>
   </ul>
 
@@ -166,12 +172,11 @@ two years is equivalent to an annual growth rate of 41.4%.
 These growth rates are typical of what we find in the deer literature. The conclusion is inescapable: well-fed deer herds grow rapidly without significant predation or deaths caused by humans.
 </p><p>
 
-To get a sense of the magnitude of the growth rates cited above, it is helpful to note that deer population growth and the growth of bank accounts paying compound interest are identical (exponential) processes mathematically. For a bank account to grow as
+To get a sense of the magnitude of the growth rates cited above, it is helpful to note that deer population growth and the growth of bank accounts paying compound interest are identical processes mathematically. For a bank account to grow as
 deer herds can - double in two years (using the estimate from Connecticut DEEP above) in the absence of significant withdrawals - would require an annual interest rate of 41.4%. 
  I doubt that there is anyone reading this (or any investment manager) who wouldn't be
 thrilled with a long-term annual 41.4% return from their bank account or investment portfolio.
-</p><p>
-The greatest investors, whether Warren Buffett, Peter Lynch, or the late David Swensen (of the Yale Endowment Fund), have not come close to returning 41.4% annually over the long term. In one of the most remarkable investing performances in history,  Peter Lynch achieved a 29% annual return when he managed the Fidelity Magellan fund from 1977 until 1990. (Mr. Lynch did best the 26% growth rate cited in the Hale/McCarthy paper by a few percentage points.)
+The greatest investors, whether Warren Buffett, Peter Lynch, or the late David Swensen, who managed the Yale Endowment Fund, have not come close to returning 41.4% annually over the long term. 
 
 </p><p id="HuntingFailure">
 As mentioned earlier, in order to reduce the size of the deer herd by hunting, we need to kill deer at a rate greater than the herd's natural growth rate.
@@ -184,9 +189,9 @@ through 2018 increased by a factor of 4, or 300% (see the chart below).
 But since 1965, the number of hunters in Massachusetts has decreased by 50%.
 
 </p><p>
-The difficulty of hunting varies inversely with deer density (the number of deer per unit area, such as a square mile), meaning that the greater the density, the easier hunting becomes and vice-versa. The large <i>increase</i> in deer killed by Massachusetts hunters despite the large <i>decrease</i> in number of hunters is due to an increase in deer density, making hunting easier for the reduced number of hunters. Increased density in a constant area (the area of Massachusetts) means the deer population has increased. 
+The difficulty of hunting varies inversely with deer density (the number of deer per unit area, such as a square mile), meaning that the greater the density, the easier hunting becomes and vice-versa. The large <i>increase</i> in deer killed by Massachusetts hunters despite the large <i>decrease</i> in number of hunters is only possible if the deer density increased, making hunting easier for the reduced number of hunters. Increased density in a constant area (the area of Massachusetts) means the deer population has increased. 
 
- </p><p>We see that despite the killing, the herd continued to grow over almost six decades. And, crucially, we know that most of that increase occurred in suburban eastern Massachusetts.
+ </p><p>So despite the killing, the herd continued to grow over almost six decades. And, crucially, we know that most of that increase occurred in suburban eastern Massachusetts.
 </p><p>This result is undoubtedly surprising to many. Part of the reason for this outcome is that state and local laws restrict hunting in densely populated areas,
 for obvious and necessary safety reasons.
 </p><p id="ConveyorBelt">
