--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ td {
 	In 2015, the Carlisle Select Board began consideration of bow-hunting deer on town land. 
   The Board members were concerned about deer forest under-story damage due to deer over-population.  This was attributable to an aggressive campaign by the Massachusetts Division of Fisheries and Wildlife (DFW) 
   to encourage towns to adopt deer-hunting programs. DFW is a state organization supported by revenues from hunting, trapping and fishing licenses. Despite DFW's
-  stated concern for forest under-story damage due to deer over-population, they encourage the hunting of coyotes, a deer predator.
+  stated concern about forest under-story damage due to deer over-population, they encourage the hunting of coyotes, a deer predator.
 
 <p>
 As a result, the following (non-binding) question appeared on the ballot of the  May 5, 2015 town election:
