modified:   index.html

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ td {
   A Brief History of the Carlisle Public Land Deer Hunts
   </h2>
 	In 2015, the Carlisle Select Board began consideration of bow-hunting deer on town land. 
-  The Board members were concerned about deer forest under-story damage due to deer over-population.  This was attributable to an aggressive campaign by the Massachusetts Division of Fisheries and Wildlife (DFW) 
+  The Board members were concerned about forest under-story damage due to deer over-population.  This was attributable to an aggressive campaign by the Massachusetts Division of Fisheries and Wildlife (DFW) 
   to encourage towns to adopt deer-hunting programs. DFW is a state organization supported by revenues from hunting, trapping and fishing licenses. Despite DFW's
   stated concern about forest under-story damage due to deer over-population, they encourage the hunting of coyotes, a deer predator.
 
