modified:   index.html

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@ Despite the town's clear message, the article did not appear on any subsequent T
         <a href="#inhumane">Bow-hunting is inhumane.</a>
       </li>
       </ul>
-      The hunts  <a href="#costs_without_benefits">impose costs without providing benefits</a>, except to a small number of people who like to hunt, most of whom are not residents of Carlisle.
+      The hunts  <a href="#costs_without_benefits">impose costs without providing benefits</a>, except to a small number of hunters. Most of the hunters who participated in the 2018 and 2019 hunts were not Carlisle residents.
       </li>
   </ul>
 
@@ -668,4 +668,5 @@ when we can intervene in ways that satisfy good scientific and engineering crite
       Since we can't kill fractional numbers of deer, all answers must be rounded up to the nearest integer. This rounding-up hides the difference in the answers to the two problems.
 </head>
 
-</html>
+</htm.>
+the hunters who participated in the 2018 and 2019 hunts were  residents
